<resources>
    <string name="app_name">MercadilloGonzalez</string>
    <string name="item_menu_configuracion">Configuracion</string>
    <string name="item_menu_perfil">Ver Perfil</string>
    <string name="item_menu_geolocalizacion">Enviar mi ubicacion</string>
    <string name="item_menu_nuevacuenta">Crear nueva cuenta</string>
    <string name="item_menu_salir">Cerrar Sesion</string>
    <string name="btn_nueva_activity">Abrir nueva ventana</string>
    <string name="txt_texto_segunda_activity">Esta es la segunda activity en ejecucion</string>
</resources>