<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/configuracion"
            android:title="@string/item_menu_configuracion"
        android:icon="@drawable/configuracion_icon"
        app:showAsAction="always"
        />

    <item android:id="@+id/perfil"
        android:title="@string/item_menu_perfil"
        android:icon="@drawable/perfil_icono"
        app:showAsAction="always"
        />

    <item android:id="@+id/mapa"
        android:title="@string/item_menu_geolocalizacion"
        android:icon="@drawable/baseline_access_alarm_24"
        app:showAsAction="ifRoom"
        />


    <item android:id="@+id/nueva_cuenta"
        android:title="@string/item_menu_nuevacuenta"
        android:icon="@drawable/agregar"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/salir"
        android:title="@string/item_menu_salir"
        android:icon="@drawable/baseline_accessible_forward_24"
        app:showAsAction="ifRoom"
        />


</menu>